# Cognitoflow

./: CMakeLists.txt  Cognitoflow.h  README.md  main.cpp  neuralflow.h
